tests/compile-fail/syntax_error.stderr
error: expected ":"
 --> $DIR/syntax_error.rs:4:8
  |
4 |     fn asdf() {} //~ ERROR expected ":"
  |        ^^^^
